--- a/trunk/of/app/views/layouts/application.rhtml
+++ b/trunk/of/app/views/layouts/application.rhtml
@@ -55,7 +55,7 @@
   <div id="shortcut_area">
     &nbsp;
     <a href="javascript: HeaderOnOff()" title="Header On/Off">
-        <%= image_tag "HeaderOnOff_Off.gif", :id => "HeaderOnOffImage" %>
+        <%= image_tag "HeaderOnOff_Off.gif", {:id => "HeaderOnOffImage" } %>
     </a>
   </div>
 </div>
