--- a/trunk/of/app/views/releases/_new_releases.rhtml
+++ b/trunk/of/app/views/releases/_new_releases.rhtml
@@ -1,8 +1,8 @@
 <h3>
-  <%=link_to 
+  <%=link_to( 
      image_tag('atom.png', 
           {:alt => 'atom', :width => '20px', :style => 'padding:8px;float:right'}),
-     {:controller => :releases, :action => :new_release_feed, :format => :xml} %>
+     {:controller => :releases, :action => :new_release_feed, :format => :xml}) %>
   <%= image_tag "of/icon06.gif", :align => "left", :valign => "middle" %>
   <%= _("Latest Releases") %>
 </h3>
