--- a/branches/sso/of/of/app/views/layouts/application.html.erb
+++ b/branches/sso/of/of/app/views/layouts/application.html.erb
@@ -1,14 +1,15 @@
 <% content_for :head_content do -%>
-  <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <title>OpenFoundry -- <%= controller.action_name %><%= " __#{$$}__" if current_user.has_role?('site_admin')%></title>
+ <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+  <title><%= @module_name ||controller.action_name %> 
+         <%= '- '+(@project ? @project.name : '') %>
+         - OpenFoundry
+         <%= " __#{$$}__" if current_user.has_role?('site_admin')%></title>
   <link rel="shortcut icon" href="http://www.openfoundry.org/images/favicon.ico" />
   <% bundle :name => "prototype" do %>
   <%= javascript_include_tag "prototype" %>
   <% end %>
   <%# bundle :name => "all", :packr_options => {:shrink_vars => true, :base62 => false} do %>
-  <%#= stylesheet_link_tag "scaffold", "openfoundry", "header", "transmenu" %>
   <%= stylesheet_link_tag "scaffold", "openfoundry" %>
-  <%#= javascript_include_tag "effects", "transmenu", "application" %>
   <%= javascript_include_tag "effects", "application" %>
   <%= javascript_include_tag 'calendar/calendar' %>
   <%= javascript_include_tag "calendar/lang/calendar-en.js" %>
