--- a/branches/sso/of/of/app/views/layouts/rt_module.html.erb
+++ b/branches/sso/of/of/app/views/layouts/rt_module.html.erb
@@ -8,7 +8,7 @@
       <% if module_tabs %>
         <%= module_tabs %>
       <% end %>
-      <% if module_title %>
+      <% if module_title && !module_title.strip.empty? %>
         <div class="module-title"><h2 class="title"><%= module_title %></h2></div>
       <% end %>
       <div class="clear"></div>
