--- a/branches/sso/of/of/app/views/openfoundry/_staticities.html.erb
+++ b/branches/sso/of/of/app/views/openfoundry/_staticities.html.erb
@@ -1,8 +1,3 @@
-<% module_title = capture do -%>
-   <%= image_tag "of/icon01.gif", :align => "left" %>
-   <%=_('Statistics')%>
-<% end -%>
-
 <% module_content = capture do -%>
 <ul>
   <li><%= _('Registed Projects')%>: <%= projectCount %></li>
@@ -10,4 +5,4 @@
 </ul>
 <% end -%>
 
-<%= render :file => 'layouts/rt_module', :locals => {:module_title => module_title, :module_content => module_content, :variation => 'square1'} %>
+<%= render :file => 'layouts/rt_module', :locals => {:module_content => module_content, :variation => 'square1'} %>
