--- a/branches/sso/of/of/app/views/projects/_new_projects.html.erb
+++ b/branches/sso/of/of/app/views/projects/_new_projects.html.erb
@@ -11,6 +11,7 @@
   <% for project in projectList -%>
   <li>
     <%= link_to h(project.summary), project_path(:id => project.id) %>
+    <%= project.created_at.strftime "%Y-%m-%d" %>
   </li>
   <% end -%>
 </ul>
