--- a/branches/sso/of/of/app/views/releases/_new_releases.html.erb
+++ b/branches/sso/of/of/app/views/releases/_new_releases.html.erb
@@ -12,6 +12,7 @@
   <% for release in newReleasesList -%>
   <li>
     <%= link_to h(release.project.summary + " " + release.version), download1_path(:project_id => release.project_id) + "##{release.version}" %>
+    <%= release.created_at.strftime "%Y-%m-%d" %>
   </li>
   <% end -%>
 </ul>
