--- a/of/app/views/projects/edit.html.erb
+++ b/of/app/views/projects/edit.html.erb
@@ -3,5 +3,6 @@
   <%= render :partial => 'form', :locals => { :is_edit => true } %>
   <%=hidden_field_tag '__clibeanna' %>
   <input type="button" value="<%=_( 'Save' ) %>" onclick="javascript: __premark(); submit();">
+  <%#= submit_tag _('Save') %>
 <% end %>
 </div>
