--- a/of/app/views/projects/new.html.erb
+++ b/of/app/views/projects/new.html.erb
@@ -4,5 +4,6 @@
   <%= render :partial => 'form', :locals => { :is_edit => false } %>
   <%=hidden_field_tag '__clibeanna' %>
   <input type="button" value="<%=_( 'Create' ) %>" onclick="javascript: __premark(); submit();">
+  <%#= submit_tag _('Create') %>
 <% end %>
 </div>
