--- a/of/app/views/category/_project_select.html.erb
+++ b/of/app/views/category/_project_select.html.erb
@@ -19,7 +19,6 @@
   %>
 
   <%=text_field_tag( 'cat_query', params[ :cat_query ], :autocomplete => 'off' ) %>
-   <img id="Search_Loading" width="15px" height="15px" src="../images/ajax-loader.gif" style="display:none"/>
 	<%=observe_field 'cat_query',
 									 :url => { :controller => :category, :action => :list },
 		               :frequency => 1,
@@ -30,8 +29,7 @@
 	   # post both of select, checkbox, and search
    %>
 
-     <%=check_box( 'is_nsc', 'validated', :checked => ( params[ :nsc_or_not ] == 'true' ) ) + t( 'Text.NSC_Project' ) %>
-   <div style="float:right;">
+   <%=check_box( 'is_nsc', 'validated', :checked => ( params[ :nsc_or_not ] == 'true' ) ) + t( 'Text.NSC_Project' ) %>
   <%=observe_field 'is_nsc_validated',
 		 							 :url => { :controller => :category, :action => :list },
 		 							 :update => 'ProjectFilterList',
@@ -40,7 +38,7 @@
 		 							 :with => "'cat=' + escape( $( 'category_id' ).value ) + '&nsc_or_not=' + escape( $( 'is_nsc_validated' ).checked ) + '&cat_query=' + $( 'cat_query' ).value"
 	   # post both of select, checkbox, and search
    %>
-  <a href="<%="#{ root_path }openfoundry/search?adv_cat=&query=" %>"><%=t( 'Advanced Options' ) %></a>
- </div>
+  &nbsp;<a href="<%="#{ root_path }openfoundry/search?adv_cat=&query=" %>"><%=t( 'Advanced Options' ) %></a>
+  <img id="Search_Loading" width="15px" height="15px" src="../images/ajax-loader.gif" style="display:none"/>
 <br>
 </div>
