--- a/of/app/views/category/_project_list.html.erb
+++ b/of/app/views/category/_project_list.html.erb
@@ -10,7 +10,7 @@
 			<th width='20%'><%=link_to 'Project Name', sort_param( 'listing', Project, 'name', 'name' ) %></th>
 			<th width='53%'><%=link_to 'Summary', sort_param( 'listing', Project, 'summary', 'summary' ) %></th>
 			<th width='15%'><%=link_to 'Category', sort_param( 'listing', Project, 'category', 'category' ) %></th>
-			<th width='12%'><%=link_to 'Release At', sort_param( 'listing', Release, 'updated_at', 'updated_at' ) %></th>
+			<th width='12%'><%=link_to 'Created At', sort_param( 'listing', Project, 'created_at', 'created_at' ) %></th>
 		</tr>
 
     <% highlight_keyword = params[:cat_query].to_s.split(' ') -%>
@@ -23,7 +23,7 @@
 		  	<td class="pj_name"><a href = "<%=url_for( :controller => 'projects', :action => 'show', :id => project.id ) %>"><%=h( project.name ) %></a></td>
         <td><%=highlight(h( project.summary ), highlight_keyword) unless project.summary.nil? %></td>
 				<td><%=highlight(h( project.cattag.name ), highlight_keyword) unless project.cattag.nil? %></td>
-			  <td><%=h( tz_date( project.last_release[ 0 ].updated_at ) ) unless project.last_release.empty? %></td>
+			  <td><%=h( tz_date( project.created_at ) ) unless project.created_at.nil? %></td>
    		</tr>
 	  <% end -%> 
     </table>
