--- a/of/app/views/site_admin/site_admin/batch_add_users.html.erb
+++ b/of/app/views/site_admin/site_admin/batch_add_users.html.erb
@@ -17,7 +17,7 @@ if params[:project_name]
     begin
       u = User.find_by_login(login)
       r.users << u
-      ApplicationController::send_msg('function','create',
+      ApplicationController::send_msg(:function,:create,
                                       {:function_name => f.name,
                                         :user_id => u.id,
                                         :project_id => r.authorizable_id
