--- a/trunk/of/app/views/layouts/application.html.erb
+++ b/trunk/of/app/views/layouts/application.html.erb
@@ -62,6 +62,9 @@
           <a href="<%= url_for(:controller => 'projects', :action => 'show', :id => @project.id) %>">
             <%= h(@project.name) %>
           </a>
+          <span class="maturity" style="color: gray; font-size: 0.8em;">
+            (<%= (t Project.maturity_to_s(@project.maturity)).gsub(/\(.+\)/, '') %>)
+          </span>
           </h3>
 	  <h6>
 		  <%= truncate(h(@project.summary), 50) %>
