--- a/trunk/of/app/views/projects/_form.html.erb
+++ b/trunk/of/app/views/projects/_form.html.erb
@@ -238,7 +238,7 @@ AAA
 <fieldset style="clear:both;">
   <legend><%= _("For NSC projects") %>:</legend>
   <%= _("Please refer to the") %> <b><a href="/help/2322#field-note" target="_blank"><%= _("help document") %></a></b>.<br/><br/>
-  <label for=\"project_nsccode\"><%= _('Project|Nsccode') %></label> (<%= _('comma seperated') %>)<br/>
+  <label for=\"project_nsccode\"><%= _('Project|Nsccode') %></label><br/>
   e.g. NSC97-2218-E-123-456
   <div class="nsccodes">
     <% if @nsccodes.present? %>
