--- a/of/app/views/layouts/integration.html.erb
+++ b/of/app/views/layouts/integration.html.erb
@@ -4,9 +4,14 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="keywords" content="Who's Who, whoswho, opensource, Open Source, People, people, Community, 社群, Group, group, Taiwan, taiwan, 台灣, workshop, 工作坊, OSSF, 自由軟體鑄造場， 自由軟體，人才，產業，Linux, GNU, 人群,工作坊,分享,學習,法律,授權,GPL,資源表列,討論區,專案開發平台,OpenFoundry,自由軟體人才資料庫,開放源碼, 專案, 軟體, Web Hosting, 網站代管, Subversion, CVS, Issue Tracker, 待辨事項, Wiki, 共同筆記， Project Management, 專案管理, Release, 釋出, Version Control, 版本釋出, tw,TW, Open Foundry, Open, 中央研究院，資訊科學研究所, 自由軟體電子報" />
-    <meta name="title" content="Projects - OpenFoundry" />
-    <meta name="author" content="ossf"/>
-    <meta name="description" content="OpenFoundry provides essential tools and services through its service platform for users to develop Open Source Software Projects, the operating funds comes from the National Science Council and the Research Center for Information Technology Innovation of Academia Sinica Taiwan." /> 
+    <% if @project %>
+      <meta name="title" content="<%= @project.summary %> - <%= @project.name %> - OpenFoundry" />
+      <meta name="description" content="<%= @project.description %>"/>
+    <% else %>
+      <meta name="title" content="Projects - OpenFoundry" />
+      <meta name="author" content="ossf"/>
+      <meta name="description" content="OpenFoundry provides essential tools and services through its service platform for users to develop Open Source Software Projects, the operating funds comes from the National Science Council and the Research Center for Information Technology Innovation of Academia Sinica Taiwan." /> 
+    <% end %>
 
     <link rel="stylesheet" href="http://<%=UI_SCHEMA_CSS_HOST%>/components/com_gantry/css/gantry.css" type="text/css" />
     <!--[if lte IE 6]>
