--- a/trunk/of/app/views/layouts/application.html.erb
+++ b/trunk/of/app/views/layouts/application.html.erb
@@ -62,6 +62,7 @@
            <ul>
              <li><a href="http://<%= @project.name %>.openfoundry.org" target="_blank">[<%= t('project_Homepage') %>]</a></li>
              <li>
+               <% @use_add_this = true %>
                <!-- AddThis Button BEGIN -->
                <div class="addthis_toolbox addthis_default_style ">
                  <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
@@ -70,8 +71,6 @@
                </div>
                <script type="text/javascript">var addthis_config =
                  {"data_track_clickback":true};</script>
-               <script type="text/javascript"
-                 src="http://s7.addthis.com/js/250/addthis_widget.js#username=openfoundry"></script>
                <!-- AddThis Button END -->
              </li>
            </ul>
@@ -85,7 +84,7 @@
           </span>
           </h3>
 	  <h6>
-		  <%= truncate(h(@project.summary), 50) %>
+		  <%= h(@project.summary) %>
           </h6>
         <%if current_user.has_role?('Admin',Project.find_by_id(params["project_id"]))%>
           <%= image_tag "green_arrow_right.gif" %>
