--- a/trunk/of/app/views/site_admin/site_admin/index.html.erb
+++ b/trunk/of/app/views/site_admin/site_admin/index.html.erb
@@ -18,6 +18,7 @@
     </div>
   </li>
   <li><%=link_to ( 'Manage Tags' ), { :action => :manage_tags } %></li>
+  <li><%=link_to 'Tagcloud Status', {:action => :tag_status} %></li>
 </ul>
 </div>
 <div style="width:50%;float:left;">
