--- a/trunk/of/app/views/partials/_qrcode_project.html.erb
+++ b/trunk/of/app/views/partials/_qrcode_project.html.erb
@@ -1,7 +1,7 @@
 <% module_content = capture do -%>
 <div id="qr">
   <center>
-    <%= qrcode("http://www.openfoundry.org/of/projects/#{@project.id}", 2, 6, h(@project.summary)) %>
+    <%= qrcode("http://www.openfoundry.org/of/projects/#{@project.id}", 2, 6) %>
     <%= h(@project.name) %>
   </center>
 </div>
