--- a/of/app/views/layouts/application.html.erb
+++ b/of/app/views/layouts/application.html.erb
@@ -65,12 +65,13 @@
                <% @use_add_this = true %>
                <!-- AddThis Button BEGIN -->
                <div class="addthis_toolbox addthis_default_style ">
-                 <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
-                 <a class="addthis_button_tweet"></a>
-                 <a class="addthis_counter addthis_pill_style"></a>
+                 <a
+                   href="http://www.addthis.com/bookmark.php?v=250&amp;username=openfoundry" class="addthis_button_compact">Share</a>
                </div>
                <script type="text/javascript">var addthis_config =
                  {"data_track_clickback":true};</script>
+               <script type="text/javascript"
+                 src="http://s7.addthis.com/js/250/addthis_widget.js#username=openfoundry"></script>
                <!-- AddThis Button END -->
              </li>
            </ul>
